QtBeef/src/Qt/qtabbar.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QTabBar
// --------------------------------------------------------------
[CRepr]
struct QTabBar_Ptr: void
{
}
extension CQt
{
	[LinkName("QTabBar_new")]
	public static extern QTabBar_Ptr* QTabBar_new(QWidget_Ptr* parent);
	[LinkName("QTabBar_new2")]
	public static extern QTabBar_Ptr* QTabBar_new2();
	[LinkName("QTabBar_Delete")]
	public static extern void QTabBar_Delete(QTabBar_Ptr* self);
	[LinkName("QTabBar_MetaObject")]
	public static extern QMetaObject_Ptr* QTabBar_MetaObject(QTabBar_Ptr* self);
	[LinkName("QTabBar_Qt_Metacast")]
	public static extern void* QTabBar_Qt_Metacast(QTabBar_Ptr* self, c_char* param1);
	[LinkName("QTabBar_Qt_Metacall")]
	public static extern c_int QTabBar_Qt_Metacall(QTabBar_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QTabBar_Tr")]
	public static extern libqt_string QTabBar_Tr(c_char* s);
	[LinkName("QTabBar_Shape")]
	public static extern QTabBar_Shape QTabBar_Shape(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetShape")]
	public static extern void QTabBar_SetShape(QTabBar_Ptr* self, QTabBar_Shape shape);
	[LinkName("QTabBar_AddTab")]
	public static extern c_int QTabBar_AddTab(QTabBar_Ptr* self, libqt_string* text);
	[LinkName("QTabBar_AddTab2")]
	public static extern c_int QTabBar_AddTab2(QTabBar_Ptr* self, QIcon_Ptr* icon, libqt_string* text);
	[LinkName("QTabBar_InsertTab")]
	public static extern c_int QTabBar_InsertTab(QTabBar_Ptr* self, c_int index, libqt_string* text);
	[LinkName("QTabBar_InsertTab2")]
	public static extern c_int QTabBar_InsertTab2(QTabBar_Ptr* self, c_int index, QIcon_Ptr* icon, libqt_string* text);
	[LinkName("QTabBar_RemoveTab")]
	public static extern void QTabBar_RemoveTab(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_MoveTab")]
	public static extern void QTabBar_MoveTab(QTabBar_Ptr* self, c_int from, c_int to);
	[LinkName("QTabBar_IsTabEnabled")]
	public static extern bool QTabBar_IsTabEnabled(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetTabEnabled")]
	public static extern void QTabBar_SetTabEnabled(QTabBar_Ptr* self, c_int index, bool enabled);
	[LinkName("QTabBar_IsTabVisible")]
	public static extern bool QTabBar_IsTabVisible(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetTabVisible")]
	public static extern void QTabBar_SetTabVisible(QTabBar_Ptr* self, c_int index, bool visible);
	[LinkName("QTabBar_TabText")]
	public static extern libqt_string QTabBar_TabText(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetTabText")]
	public static extern void QTabBar_SetTabText(QTabBar_Ptr* self, c_int index, libqt_string* text);
	[LinkName("QTabBar_TabTextColor")]
	public static extern QColor_Ptr QTabBar_TabTextColor(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetTabTextColor")]
	public static extern void QTabBar_SetTabTextColor(QTabBar_Ptr* self, c_int index, QColor_Ptr* color);
	[LinkName("QTabBar_TabIcon")]
	public static extern QIcon_Ptr QTabBar_TabIcon(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetTabIcon")]
	public static extern void QTabBar_SetTabIcon(QTabBar_Ptr* self, c_int index, QIcon_Ptr* icon);
	[LinkName("QTabBar_ElideMode")]
	public static extern Qt_TextElideMode QTabBar_ElideMode(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetElideMode")]
	public static extern void QTabBar_SetElideMode(QTabBar_Ptr* self, Qt_TextElideMode mode);
	[LinkName("QTabBar_SetTabToolTip")]
	public static extern void QTabBar_SetTabToolTip(QTabBar_Ptr* self, c_int index, libqt_string* tip);
	[LinkName("QTabBar_TabToolTip")]
	public static extern libqt_string QTabBar_TabToolTip(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetTabWhatsThis")]
	public static extern void QTabBar_SetTabWhatsThis(QTabBar_Ptr* self, c_int index, libqt_string* text);
	[LinkName("QTabBar_TabWhatsThis")]
	public static extern libqt_string QTabBar_TabWhatsThis(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetTabData")]
	public static extern void QTabBar_SetTabData(QTabBar_Ptr* self, c_int index, QVariant_Ptr* data);
	[LinkName("QTabBar_TabData")]
	public static extern QVariant_Ptr QTabBar_TabData(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabRect")]
	public static extern QRect_Ptr QTabBar_TabRect(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabAt")]
	public static extern c_int QTabBar_TabAt(QTabBar_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QTabBar_CurrentIndex")]
	public static extern c_int QTabBar_CurrentIndex(QTabBar_Ptr* self);
	[LinkName("QTabBar_Count")]
	public static extern c_int QTabBar_Count(QTabBar_Ptr* self);
	[LinkName("QTabBar_SizeHint")]
	public static extern QSize_Ptr QTabBar_SizeHint(QTabBar_Ptr* self);
	[LinkName("QTabBar_MinimumSizeHint")]
	public static extern QSize_Ptr QTabBar_MinimumSizeHint(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetDrawBase")]
	public static extern void QTabBar_SetDrawBase(QTabBar_Ptr* self, bool drawTheBase);
	[LinkName("QTabBar_DrawBase")]
	public static extern bool QTabBar_DrawBase(QTabBar_Ptr* self);
	[LinkName("QTabBar_IconSize")]
	public static extern QSize_Ptr QTabBar_IconSize(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetIconSize")]
	public static extern void QTabBar_SetIconSize(QTabBar_Ptr* self, QSize_Ptr* size);
	[LinkName("QTabBar_UsesScrollButtons")]
	public static extern bool QTabBar_UsesScrollButtons(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetUsesScrollButtons")]
	public static extern void QTabBar_SetUsesScrollButtons(QTabBar_Ptr* self, bool useButtons);
	[LinkName("QTabBar_TabsClosable")]
	public static extern bool QTabBar_TabsClosable(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetTabsClosable")]
	public static extern void QTabBar_SetTabsClosable(QTabBar_Ptr* self, bool closable);
	[LinkName("QTabBar_SetTabButton")]
	public static extern void QTabBar_SetTabButton(QTabBar_Ptr* self, c_int index, QTabBar_ButtonPosition position, QWidget_Ptr* widget);
	[LinkName("QTabBar_TabButton")]
	public static extern QWidget_Ptr* QTabBar_TabButton(QTabBar_Ptr* self, c_int index, QTabBar_ButtonPosition position);
	[LinkName("QTabBar_SelectionBehaviorOnRemove")]
	public static extern QTabBar_SelectionBehavior QTabBar_SelectionBehaviorOnRemove(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetSelectionBehaviorOnRemove")]
	public static extern void QTabBar_SetSelectionBehaviorOnRemove(QTabBar_Ptr* self, QTabBar_SelectionBehavior behavior);
	[LinkName("QTabBar_Expanding")]
	public static extern bool QTabBar_Expanding(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetExpanding")]
	public static extern void QTabBar_SetExpanding(QTabBar_Ptr* self, bool enabled);
	[LinkName("QTabBar_IsMovable")]
	public static extern bool QTabBar_IsMovable(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetMovable")]
	public static extern void QTabBar_SetMovable(QTabBar_Ptr* self, bool movable);
	[LinkName("QTabBar_DocumentMode")]
	public static extern bool QTabBar_DocumentMode(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetDocumentMode")]
	public static extern void QTabBar_SetDocumentMode(QTabBar_Ptr* self, bool set);
	[LinkName("QTabBar_AutoHide")]
	public static extern bool QTabBar_AutoHide(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetAutoHide")]
	public static extern void QTabBar_SetAutoHide(QTabBar_Ptr* self, bool hide);
	[LinkName("QTabBar_ChangeCurrentOnDrag")]
	public static extern bool QTabBar_ChangeCurrentOnDrag(QTabBar_Ptr* self);
	[LinkName("QTabBar_SetChangeCurrentOnDrag")]
	public static extern void QTabBar_SetChangeCurrentOnDrag(QTabBar_Ptr* self, bool change);
	[LinkName("QTabBar_AccessibleTabName")]
	public static extern libqt_string QTabBar_AccessibleTabName(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_SetAccessibleTabName")]
	public static extern void QTabBar_SetAccessibleTabName(QTabBar_Ptr* self, c_int index, libqt_string* name);
	[LinkName("QTabBar_SetCurrentIndex")]
	public static extern void QTabBar_SetCurrentIndex(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_CurrentChanged")]
	public static extern void QTabBar_CurrentChanged(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabCloseRequested")]
	public static extern void QTabBar_TabCloseRequested(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabMoved")]
	public static extern void QTabBar_TabMoved(QTabBar_Ptr* self, c_int from, c_int to);
	[LinkName("QTabBar_TabBarClicked")]
	public static extern void QTabBar_TabBarClicked(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabBarDoubleClicked")]
	public static extern void QTabBar_TabBarDoubleClicked(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabSizeHint")]
	public static extern QSize_Ptr QTabBar_TabSizeHint(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_MinimumTabSizeHint")]
	public static extern QSize_Ptr QTabBar_MinimumTabSizeHint(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabInserted")]
	public static extern void QTabBar_TabInserted(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabRemoved")]
	public static extern void QTabBar_TabRemoved(QTabBar_Ptr* self, c_int index);
	[LinkName("QTabBar_TabLayoutChange")]
	public static extern void QTabBar_TabLayoutChange(QTabBar_Ptr* self);
	[LinkName("QTabBar_Event")]
	public static extern bool QTabBar_Event(QTabBar_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QTabBar_ResizeEvent")]
	public static extern void QTabBar_ResizeEvent(QTabBar_Ptr* self, QResizeEvent_Ptr* param1);
	[LinkName("QTabBar_ShowEvent")]
	public static extern void QTabBar_ShowEvent(QTabBar_Ptr* self, QShowEvent_Ptr* param1);
	[LinkName("QTabBar_HideEvent")]
	public static extern void QTabBar_HideEvent(QTabBar_Ptr* self, QHideEvent_Ptr* param1);
	[LinkName("QTabBar_PaintEvent")]
	public static extern void QTabBar_PaintEvent(QTabBar_Ptr* self, QPaintEvent_Ptr* param1);
	[LinkName("QTabBar_MousePressEvent")]
	public static extern void QTabBar_MousePressEvent(QTabBar_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QTabBar_MouseMoveEvent")]
	public static extern void QTabBar_MouseMoveEvent(QTabBar_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QTabBar_MouseReleaseEvent")]
	public static extern void QTabBar_MouseReleaseEvent(QTabBar_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QTabBar_MouseDoubleClickEvent")]
	public static extern void QTabBar_MouseDoubleClickEvent(QTabBar_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QTabBar_WheelEvent")]
	public static extern void QTabBar_WheelEvent(QTabBar_Ptr* self, QWheelEvent_Ptr* event);
	[LinkName("QTabBar_KeyPressEvent")]
	public static extern void QTabBar_KeyPressEvent(QTabBar_Ptr* self, QKeyEvent_Ptr* param1);
	[LinkName("QTabBar_ChangeEvent")]
	public static extern void QTabBar_ChangeEvent(QTabBar_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QTabBar_TimerEvent")]
	public static extern void QTabBar_TimerEvent(QTabBar_Ptr* self, QTimerEvent_Ptr* event);
	[LinkName("QTabBar_InitStyleOption")]
	public static extern void QTabBar_InitStyleOption(QTabBar_Ptr* self, QStyleOptionTab_Ptr* option, c_int tabIndex);
	[LinkName("QTabBar_Tr2")]
	public static extern libqt_string QTabBar_Tr2(c_char* s, c_char* c);
	[LinkName("QTabBar_Tr3")]
	public static extern libqt_string QTabBar_Tr3(c_char* s, c_char* c, c_int n);
}
